# actix-web-diesel-server-side

./: .env  Cargo.toml  README.md
migrations/2022-11-17-074618_create_cats/: up.sql
src/: main.rs  models.rs
static/: add.html  cat.html  index.html
