[package]
name = "catdex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6.2"
serde_json = "1.0.53"
handlebars = { version = "4.3.5", features = ["dir_source"] }
diesel = { version = "2.0.0", features = ["postgres", "r2d2"] }
serde = { version = "1.0", features = ["derive"] }
r2d2 = "0.8.8"
dotenvy="0.15.6"
awmp = "0.8.1"
